2011-05-26  Simon Josefsson  <simon@josefsson.org>

	* lib/gen-uni-tables.c: Say "gen-uni-tables.c" consistently.

2011-05-26  Bruno Haible  <bruno@clisp.org>

	mbsrchr: Avoid collision with system function on Interix.
	* lib/string.in.h (mbsrchr): Define as rpl_mbsrchr also on Interix.
	Reported by Markus Duft <mduft@gentoo.org>.

2011-05-25  Eric Blake  <eblake@redhat.com>

	getcwd: work around mingw bug
	* lib/getcwd-lgpl.c (rpl_getcwd): Guarantee correct error.
	* doc/posix-functions/getcwd.texi (getcwd): Document it.
	Reported by Matthias Bolte.

2011-05-24  Paul Eggert  <eggert@cs.ucla.edu>

	test-intprops: disable -Wtype-limits diagnostics
	* tests/test-intprops.c: Use a pragma to ignore -Wtype-limits
	diagnostics.  Otherwise, the integer overflow macros generate many
	diagnostics.  Reported by Jim Meyering in
	<http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00528.html>.

2011-05-24  Eric Blake  <eblake@redhat.com>

	docs: document recently fixed glibc printf bug
	* doc/posix-functions/fprintf.texi (fprintf): Document it.
	* doc/posix-functions/printf.texi (printf): Likewise.
	* doc/posix-functions/vfprintf.texi (vfprintf): Likewise.
	* doc/posix-functions/vprintf.texi (vprintf): Likewise.

2011-05-24  Eric Blake  <eblake@redhat.com>

	tests: fix logic bug in init.sh
	* tests/init.sh: (gl_set_x_corrupts_stderr_): Clear for successful
	shell.

2011-05-24  Jim Meyering  <meyering@redhat.com>

	utimensat: do not reference an out-of-scope buffer
	Otherwise, with __linux__ defined, "times" would point to a buffer, "ts"
	declared in an inner scope, yet "times" would be dereferenced outside
	the scope in which "ts" was valid.
	* lib/utimensat.c (rpl_utimensat) [__linux__]: Move the declaration
	of ts[2] "out/up", so that the use of aliased "times" (via
	"times = ts;") does not end up referencing an out-of-scope "ts"

	opendir-safer.c: don't clobber errno; don't close negative FD
	* lib/opendir-safer.c (opendir_safer):