@@ -1,3 +1,11 @@
+2011-05-28  Bruno Haible  <bruno@clisp.org>
+
+	getloadavg: Remove an unreliable safety check.
+	* m4/getloadavg.m4 (gl_GETLOADAVG): Drop argument. Remove test whether
+	getloadavg.c is in place.
+	* modules/getloadavg (configure.ac): Drop argument of gl_GETLOADAVG.
+	Reported by Sam Steingold <sds@gnu.org>.
+
 2011-05-26  Simon Josefsson  <simon@josefsson.org>
 
 	* lib/gen-uni-tables.c: Say "gen-uni-tables.c" consistently.
